修npc data的bug